--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
+    implementation 'com.squareup.picasso:picasso:2.8'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
